App download Added

--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -580,6 +580,9 @@ html {
   /* background-color: red; */
   margin-top: 20px;
 }
+.subtextfeature:hover{
+  color: white;
+}
 .market-table {
   width: 100vw;
   border-collapse: collapse;
