--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -1302,4 +1302,29 @@ html {
   justify-content: center;
   align-items: center;
 }
+.locations{
+  width: 100%;
+  height: 100px;
+  /* background-color: red; */
+  position: relative;
+  top: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+}
+.jhdjfndn{
+  background-color: orangered;
+  height: 40px;
+  width: 150px;
+  text-decoration: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
 
