--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -1327,4 +1327,48 @@ html {
   text-align: center;
   align-items: center;
 }
-
+.jhdjfndn:hover{
+  background-color: orangered;
+}
+.locationinfos{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  /* background-color: orangered; */
+  position: relative;
+  top:230px ;
+}
+.jdjdkdf{
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+  width: 30%;
+  gap: 20px;
+}
+.jfdkvd{
+  color: grey;
+  font-weight: 400;
+  font-size: 18px;
+}
+.kjlkglfk{
+  height: 20vh;
+  width: 100%;
+}
+@media screen and (max-width:741px){
+  .jdjdkdf{
+    width: 92%;
+  }
+  .locationinfos{
+    flex-direction: column;
+    gap: 50px;
+  }
+  /* .jhjfdkd{
+    display: none;
+  } */
+}
