--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -1730,13 +1730,14 @@ html {
 }
 .chatbox {
   position: fixed;
-  height: 300px;
+  height: 500px;
   width: 300px;
   border-radius: 20px;
   right: 20px;
   bottom: 150px;
   background-color: white;
   padding: 10px;
+  font-size: 15px;
   z-index: 1000;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
